--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "react-workshop",
+  "name": "redux-fundamentals-workshop",
   "version": "0.1.0",
-  "homepage": "https://react-workshop.netlify.com/",
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
