--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "webpack": "^3.6.0"
   },
